[package]
name = "iptools"
version = "0.2.4"
authors = ["Denis Avvakumov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Deniskore/iptools"
homepage = "https://github.com/Deniskore"
description = """
Python iptools port for Rust
"""
keywords = ["ip", "iptools", "network"]
categories = ["algorithms", "network-programming"]
edition = "2021"

[dependencies]
regex = "1.9.3"
once_cell = "1.18.0"
ahash = "0.8.3"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
